[package]
name = "chapter10"
version = "0.1.0"
authors = ["yuk1ty <yuki.mul.tiplus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
nix = "0.20.0"

[[bin]]
name = "10_2"
path = "src/10_2/main.rs"
