[package]
name = "chapter10"
version = "0.1.0"
authors = ["yuk1ty <yuki.mul.tiplus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
notify = "4.0.16"
memmap2 = "0.2.2"

[[bin]]
name = "10_1"
path = "src/10_1/main.rs"

[[bin]]
name = "3"
path = "src/3/main.rs"
