[package]
name = "chapter11"
version = "0.1.0"
authors = ["yuk1ty <yuki.mul.tiplus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
nix = "0.21.0"

[[bin]]
name = "11_1_2"
path = "src/11_1_2/main.rs"
