[package]
name = "chapter12"
version = "0.1.0"
authors = ["yuk1ty <yuki.mul.tiplus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
signal-hook = "0.3.9"

[[bin]]
name = "12_4"
path = "src/12_4/main.rs"