[package]
name = "chapter3"
version = "0.1.0"
authors = ["yuk1ty <yuki.mul.tiplus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main_3_1"
path = "src/3_1/main.rs"

[[bin]]
name = "main_3_2_1_1"
path = "src/3_2/3_2_1/main_3_2_1_1.rs"

[[bin]]
name = "main_3_2_1_2"
path = "src/3_2/3_2_1/main_3_2_1_2.rs"

[[bin]]
name = "main_3_2_2_1"
path = "src/3_2/3_2_2/main_3_2_2_1.rs"

[[bin]]
name = "main_3_2_2_2"
path = "src/3_2/3_2_2/main_3_2_2_2.rs"

[[bin]]
name = "main_3_2_2_3"
path = "src/3_2/3_2_2/main_3_2_2_3.rs"
