[package]
name = "chapter3"
version = "0.1.0"
authors = ["yuk1ty <yuki.mul.tiplus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }

[[bin]]
name = "main_3_1"
path = "src/3_1/main.rs"
