[package]
name = "chapter3"
version = "0.1.0"
authors = ["yuk1ty <yuki.mul.tiplus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand = "0.8.3"
zip = "0.5.12"
lib = { path = "../lib" }
httparse = "1.3.5"
anyhow = "1.0.40"

[[bin]]
name = "main_3_1"
path = "src/3_1/main.rs"

[[bin]]
name = "main_3_2_1_1"
path = "src/3_2/3_2_1/main_3_2_1_1.rs"

[[bin]]
name = "main_3_2_1_2"
path = "src/3_2/3_2_1/main_3_2_1_2.rs"

[[bin]]
name = "main_3_2_2_1"
path = "src/3_2/3_2_2/main_3_2_2_1.rs"

[[bin]]
name = "main_3_2_2_2"
path = "src/3_2/3_2_2/main_3_2_2_2.rs"

[[bin]]
name = "main_3_2_2_3"
path = "src/3_2/3_2_2/main_3_2_2_3.rs"

[[bin]]
name = "3_4_1"
path = "src/3_4_1/main.rs"
[[bin]]
name = "3_4_2"
path = "src/3_4_2/main.rs"
[[bin]]
name = "3_4_3"
path = "src/3_4_3/main.rs"
[[bin]]
name = "3_4_4"
path = "src/3_4_4/main.rs"
[[bin]]
name = "3_5_1"
path = "src/3_5_1/main.rs"
[[bin]]
name = "3_5_2"
path = "src/3_5_2/main.rs"
[[bin]]
name = "3_5_3"
path = "src/3_5_3/main.rs"
[[bin]]
name = "3_5_4"
path = "src/3_5_4/main.rs"
[[bin]]
name = "3_9_1"
path = "src/3_9_1/main.rs"
[[bin]]
name = "3_9_2"
path = "src/3_9_2/main.rs"
[[bin]]
name = "3_9_3"
path = "src/3_9_3/main.rs"
[[bin]]
name = "3_9_4"
path = "src/3_9_4/main.rs"
[[bin]]
name = "3_9_5"
path = "src/3_9_5/main.rs"
[[bin]]
name = "3_6_1"
path = "src/3_6_1/main.rs"
[[bin]]
name = "3_6_3"
path = "src/3_6_3/main.rs"
[[bin]]
name = "3_6_2"
path = "src/3_6_2/main.rs"
[[bin]]
name = "3_7"
path = "src/3_7/main.rs"
[[bin]]
name = "3_7_multi"
path = "src/3_7/multi_reader.rs"
[[bin]]
name = "3_7_tee"
path = "src/3_7/tee_reader.rs"
