[package]
name = "chapter4"
version = "0.1.0"
authors = ["yuk1ty <yuki.mul.tiplus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
signal-hook = "0.3"

[[bin]]
name = "4_3_1"
path = "src/4_3_1/main.rs"
