[package]
name = "chapter6"
version = "0.1.0"
authors = ["yuk1ty <yuki.mul.tiplus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
tokio = "1.6.0"
http = "0.2.4"

[[bin]]
name = "6_5"
path = "src/6_5/main.rs"

[[bin]]
name = "6_6"
path = "src/6_6/main.rs"

[[bin]]
name = "6_7"
path = "src/6_7/main.rs"

[[bin]]
name = "6_8"
path = "src/6_8/main.rs"

[[bin]]
name = "6_9"
path = "src/6_9/main.rs"
