[package]
name = "chapter9"
version = "0.1.0"
authors = ["yuk1ty <yuki.mul.tiplus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }

[[bin]]
name = "main_9_2_1"
path = "src/main_9_2_1.rs"

[[bin]]
name = "main_9_2_3"
path = "src/main_9_2_3.rs"
