[package]
name = "chapter9"
version = "0.1.0"
authors = ["yuk1ty <yuki.mul.tiplus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
regex = "1"

[[bin]]
name = "main_9_2_1"
path = "src/main_9_2_1.rs"

[[bin]]
name = "main_9_2_3"
path = "src/main_9_2_3.rs"

[[bin]]
name = "main_9_2_4"
path = "src/main_9_2_4.rs"

[[bin]]
name = "9_5_1"
path = "src/9_5_1/main.rs"

[[bin]]
name = "9_5_2"
path = "src/9_5_2/main.rs"

[[bin]]
name = "9_5_3"
path = "src/9_5_3/main.rs"

[[bin]]
name = "9_5_4"
path = "src/9_5_4/main.rs"

[[bin]]
name = "9_5_5"
path = "src/9_5_5/main.rs"
